--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "ahooks": "^3.3.9",
     "antd": "^4.19.5",
+    "antd-img-crop": "^4.2.1",
+    "axios": "^0.27.1",
+    "lodash-es": "^4.17.21",
+    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
@@ -43,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
